hw2. contact page

--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
         <!--**************************************-->
 
         <div class="container">
-            <div class="row r1">
 
+            <div class="row r1">
                 <div class="col-md-12 r1c1">
                     <br>
                     Contact
@@ -37,6 +37,56 @@
             </div> <!--r1-->
 
             <hr>
+
+            <div class="row r2">
+                <div class="col-md-12 r2c1">
+                    <div class="nameHdr">
+                        Name
+                    </div>
+                    <div class="nameIP">
+                        <form>
+                            <input type="text" size="120" placeholder="&#60your name here&gt">
+                        </form>
+                    </div>
+
+                </div>
+            </div> <!--r1-->
+
+            <div class="row r3">
+                <div class="col-md-12 r3c1">
+                    <div class="emailHdr">
+                        Email
+                    </div>
+                    <div class="emailIP">
+                        <form>
+                            <input type="text" size="120" placeholder="&#60your email here&gt">
+                        </form>
+                    </div>
+                </div>
+            </div> <!--r1-->
+
+            <div class="row r4">
+                <div class="col-md-12 r4c1">
+                    <div class="messageHdr">
+                        Message
+                    </div>                        
+
+                    <div class="messageIP">
+                        <textarea name="comment" form="usrform"> "&#60type your message here&gt</textarea>
+                    </div>
+
+                </div>
+            </div> <!--r1-->
+
+            <div class="row r5">
+                <div class="col-md-12 r5c1">
+                    <div class="btnSubmit">
+                        <br>
+                        Submit
+                    </div>
+
+                </div>
+            </div> <!--r1-->
 
         </div> <!--container-->
 
