--- a/portfolio.html
+++ b/portfolio.html
@@ -28,15 +28,63 @@
         <!--**************************************-->
 
         <div class="container">
-            <div class="row r1">
 
+            <div class="row r1">
                 <div class="col-md-12 r1c1">
-                    <br>
                     Portfolio
                 </div>
             </div> <!--r1-->
 
             <hr>
+
+            <div class="row r2">
+                <div class="col-md-6 r2c1">
+                    <div class="picCell">
+                        <img class="pic p1" src="assets/images/portfolio1.jpg">                    
+                    </div>
+                    <div class="picLabel">
+                        Hangman
+                    </div>
+                </div>
+                <div class="col-md-6 r2c2">
+                    <div class="picCell">
+                        <img class="pic p2" src="assets/images/portfolio2.jpg">                    
+                    </div>
+                    <div class="picLabel">
+                        RPG Game
+                    </div>
+                </div>
+            </div> <!--r2-->
+
+            <div class="row r3">
+                <div class="col-md-6 r3c1">
+                    <div class="picCell">
+                        <img class="pic p3" src="assets/images/portfolio3.jpg">
+                    </div>
+                    <div class="picLabel">
+                        Trivia Game
+                    </div>
+                </div>
+                <div class="col-md-6 r3c2">
+                    <div class="picCell">
+                        <img class="pic p4" src="assets/images/portfolio4.jpg">
+                    </div>
+                    <div class="picLabel">
+                        Rutgers Info Widget
+                    </div>
+                </div>
+            </div> <!--r3-->
+
+            <div class="row r4">
+                <div class="col-md-6 r4c1">
+                    <div class="picCell">
+                        <img class="pic p5" src="assets/images/portfolio5.jpg">             
+                    </div>
+                    <div class="picLabel picBottom">
+                        Rock, Paper, Scissors
+                    </div>
+                </div>
+            </div> <!--r4-->
 
         </div> <!--container-->
 
