--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
 
         <!--**************************************-->
 
-        <header>
+        <div class="container">
 
-            <div class="nameBox">
-                <br><br>
-                Brian McLaughlin
+            <div class="row r0">
+
+                <div class="col-md-4 nameBox">
+                    <br><br>
+                    Brian McLaughlin
+                </div>
+
+                <div class="col-md-4">
+                </div>
+
+                <nav class="col-md-4 menus">
+                    <br><br>
+                    <a href="index.html">About</a>
+                    <a href="portfolio.html">Portfolio</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
             </div>
 
-            <nav class="menus">
-                <a href="index.html">About</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
-            </nav>
-
-        </header>
-
-        <!--**************************************-->
-
-        <div class="container">
             <div class="row r1">
 
                 <div class="col-md-12 r1c1">
@@ -67,19 +69,18 @@
 
                 </div> <!--col-md-12 r2c1-->
             </div> <!--r2-->
+
         </div> <!--container-->
 
-        <!--**************************************-->
-
-        <footer>
+        <footer class="container-fluid">
             <br>
             <p>Copyright 2019</p>
         </footer>
-        
+
         <!--**************************************-->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    </body>
+    </body 
 
 </html>
