--- a/portfolio.html
+++ b/portfolio.html
@@ -10,24 +10,25 @@
 
         <!--**************************************-->
 
-        <header>
-
-            <div class="nameBox">
-                <br><br>
-                Brian McLaughlin
-            </div>
-
-            <nav class="menus">
-                <a href="index.html">About</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
-            </nav>
-
-        </header>
-
-        <!--**************************************-->
-
         <div class="container">
+
+            <div class="row r0">
+
+                <div class="col-md-4 nameBox">
+                    <br><br>
+                    Brian McLaughlin
+                </div>
+
+                <div class="col-md-4">
+                </div>
+
+                <nav class="col-md-4 menus">
+                    <br><br>
+                    <a href="index.html">About</a>
+                    <a href="portfolio.html">Portfolio</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
+            </div>
 
             <div class="row r1">
                 <div class="col-md-12 r1c1">
