--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,10 @@
                 </div>
 
                 <nav class="col-md-4 menus">
-                    <br><br>
-                    <a href="index.html">About</a>
-                    <a href="portfolio.html">Portfolio</a>
-                    <a href="contact.html">Contact</a>
+                    <br>
+                    <a class="navLink" href="index.html">About</a>
+                    <a class="navLink" href="portfolio.html">Portfolio</a>
+                    <a class="navLink" href="contact.html">Contact</a>
                 </nav>
             </div>
 
@@ -95,7 +95,7 @@
             <br>
             <p>Copyright 2019</p>
         </footer>
-        
+    
         <!--**************************************-->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
