--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
         <title>About Brian</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="assets/css/shared.css">
@@ -43,7 +45,7 @@
             <div class="row r2">
 
                 <div class="col-md-12 r2c1">
-                    <img class="myPic" src="assets/images/panda.jpg">
+                    <img class="myPic" src="assets/images/panda.jpg" alt="Me, if I was a panda">
 
                     <p>
                         Hello! I've got over 30 years in software development, developing applications supporting diverse goals such 
@@ -65,7 +67,7 @@
                         son's Xbox.
                     </p>
 
-                    <img src="assets/images/Mabel1.jpg" class="mabelPic" height="80" width="110">
+                    <img src="assets/images/Mabel1.jpg" class="mabelPic" height="80" width="110" alt="Cutest pup ever">
 
                 </div> <!--col-md-12 r2c1-->
             </div> <!--r2-->
@@ -86,6 +88,6 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    </body 
+    </body>     
 
 </html>
