--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
         <title>Brian's Portfolio</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="assets/css/shared.css">
@@ -41,7 +43,7 @@
             <div class="row r2">
                 <div class="col-md-6 r2c1">
                     <div class="picCell">
-                        <img class="pic p1" src="assets/images/portfolio1.jpg">                    
+                        <img class="pic p1" src="assets/images/portfolio1.jpg" alt="pic1">                    
                     </div>
                     <div class="picLabel">
                         Hangman
@@ -49,7 +51,7 @@
                 </div>
                 <div class="col-md-6 r2c2">
                     <div class="picCell">
-                        <img class="pic p2" src="assets/images/portfolio2.jpg">                    
+                        <img class="pic p2" src="assets/images/portfolio2.jpg" alt="pic2">                    
                     </div>
                     <div class="picLabel">
                         RPG Game
@@ -60,7 +62,7 @@
             <div class="row r3">
                 <div class="col-md-6 r3c1">
                     <div class="picCell">
-                        <img class="pic p3" src="assets/images/portfolio3.jpg">
+                        <img class="pic p3" src="assets/images/portfolio3.jpg" alt="pic3">
                     </div>
                     <div class="picLabel">
                         Trivia Game
@@ -68,7 +70,7 @@
                 </div>
                 <div class="col-md-6 r3c2">
                     <div class="picCell">
-                        <img class="pic p4" src="assets/images/portfolio4.jpg">
+                        <img class="pic p4" src="assets/images/portfolio4.jpg" alt="pic4">
                     </div>
                     <div class="picLabel">
                         Rutgers Info Widget
@@ -79,7 +81,7 @@
             <div class="row r4">
                 <div class="col-md-6 r4c1">
                     <div class="picCell">
-                        <img class="pic p5" src="assets/images/portfolio5.jpg">             
+                        <img class="pic p5" src="assets/images/portfolio5.jpg" alt="pic5">             
                     </div>
                     <div class="picLabel picBottom">
                         Rock, Paper, Scissors
