--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
         <title>Contact Brian</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="assets/css/shared.css">
@@ -46,7 +48,7 @@
                     </div>
                     <div class="nameIP">
                         <form>
-                            <input type="text" size="120" placeholder="&#60your name here&gt">
+                            <input type="text" size="120" placeholder="&#60;your name here&gt;">
                         </form>
                     </div>
 
@@ -60,7 +62,7 @@
                     </div>
                     <div class="emailIP">
                         <form>
-                            <input type="text" size="120" placeholder="&#60your email here&gt">
+                            <input type="text" size="120" placeholder="&#60;your email here&gt;">
                         </form>
                     </div>
                 </div>
@@ -73,7 +75,7 @@
                     </div>                        
 
                     <div class="messageIP">
-                        <textarea name="comment" form="usrform"> "&#60type your message here&gt</textarea>
+                        <textarea name="comment" form="usrform"> "&#60;type your message here&gt;</textarea>
                     </div>
 
                 </div>
