--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
                     </div>                        
 
                     <div class="messageIP">
-                        <textarea name="comment" form="usrform"> "&#60;type your message here&gt;</textarea>
+                        <textarea name="comment"> "&#60;type your message here&gt;</textarea>
                     </div>
 
                 </div>
